Improved way that Hateoas is abstracted and refactored all of the relevant code